# solana-starter-apps

./: .gitignore  README.md  package.json
anchorPlayground/babyAnchor/: Anchor.toml
anchorPlayground/movieReview/: Anchor.toml
babyAnchor/tests/: babyAnchor.ts
coinMinter/: README.md  package-lock.json  package.json
coinMinter/src/: index.ts  (+6 more)
components/: AppBar.tsx  Form.tsx  MovieList.tsx
get-solana-balance-demo/: README.md
models/: Movie.ts  StudentIntro.ts
nft-display-frontend/: README.md
pages/: _app.tsx  index.tsx
rustPlayground/: README.md
rustPlayground/hello-rust/: .env  Cargo.toml  package-lock.json  package.json
rustPlayground/hello-rust/src/: client.ts  initializeKeypair.ts  intro_state.rs  lib.rs  state.rs  studentIntro.rs
rustPlayground/hello-rust/src/notes/: client.ts  errors.rs  lib.rs  notes.rs  processor.rs  state.rs
rustPlayground/hello-rust/src/student_intros/: intro_error.rs  intro_instruction.rs  intro_state.rs  lib.rs  processor.rs
rustPlayground/movie-reviews/: Cargo.toml
rustPlayground/movie-reviews/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
rustPlayground/movie-reviews/tests/: integration_test.rs  processor_tests.rs
rustPlayground/movie-reviews/tests/utils/: mod.rs
simple-script/: README.md
src/: conditionalCreateTest.ts  index.ts  makeMetaplex.ts  mintingDemo.ts  mintingFunctions.ts  tokenMetadata.ts  uploadMetadataDemo.ts
student-intros-data-account-demo/: README.md
styles/: AddressForm.module.css
sugarland/: README.md  cache.json  config.json
(+30 files in other folders)
