[package]
name = "movie-reviews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
solana-program = "1.14.7"
thiserror = "1.0.37"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="=1.1.1", features = [ "no-entrypoint" ] }
solana-sdk = "1.14.8"
solana-program-test = "1.14.8"
assert_matches = "1.5.0"

[lib]
name = "movies"
crate-type = ["cdylib", "lib"]
